--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,18 @@ a {
   text-decoration: none;
 }
 
+h1{
+  font-family: var(--font-grotesk), sans-serif;
+}
+
 * {
   box-sizing: border-box;
+}
+
+body{
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 @media (prefers-color-scheme: dark) {
